--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,22 @@
-{
-    "presets": [
-        "env"
-    ],
-    "plugins": [
-        "transform-object-rest-spread"
-    ]
-}
+ {
+     "presets": ["@babel/preset-env"],
+     
+     "plugins": [
+         "@babel/plugin-proposal-object-rest-spread",
+         "@babel/plugin-transform-runtime"
+     ]
+ }
+
+
+// {
+//     "presets": [
+//       [
+//         "@babel/preset-env",
+//         {
+//           "targets": {
+//             "node": "current"
+//           }
+//         }
+//       ]
+//     ]
+//   }
