--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node dist/index.js",
     "heroku-postbuild": "babel src --out-dir dist --copy-files",
     "dev": "env-cmd -f ./config/dev.env nodemon src/index.js --ext js,graphql --exec babel-node",
-    "test": "env-cmd -f ./config/test.env jest --watch",
+    "test": "env-cmd -f ./config/test.env jest --watch --runInBand",
     "get-schema": "graphql get-schema -p prisma --dotenv config/dev.env"
   },
   "jest": {
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/client": "^3.2.2",
     "@babel/cli": "^7.11.6",
     "@babel/plugin-transform-runtime": "^7.11.5",
     "@babel/polyfill": "^7.11.5",
@@ -28,7 +29,7 @@
     "bcryptjs": "^2.4.3",
     "cross-fetch": "^3.0.6",
     "env-cmd": "^10.1.0",
-    "graphql": "^14.0.2",
+    "graphql": "^14.7.0",
     "graphql-cli": "^4.0.0",
     "graphql-yoga": "^1.18.3",
     "jsonwebtoken": "^8.5.1",
