--- a/package.json
+++ b/package.json
@@ -20,20 +20,28 @@
     "@apollo/client": "^3.2.2",
     "@babel/cli": "^7.11.6",
     "@babel/plugin-transform-runtime": "^7.11.5",
-    "@babel/polyfill": "^7.11.5",
+    "@babel/polyfill": "^7.0.0",
     "@babel/register": "^7.11.5",
     "apollo-boost": "^0.4.9",
+    "apollo-cache-inmemory": "^1.2.10",
+    "apollo-client": "^2.4.2",
+    "apollo-link": "^1.2.3",
+    "apollo-link-error": "^1.1.1",
+    "apollo-link-http": "^1.5.5",
+    "apollo-link-ws": "^1.0.9",
+    "apollo-utilities": "^1.0.21",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
     "bcryptjs": "^2.4.3",
     "cross-fetch": "^3.0.6",
     "env-cmd": "^10.1.0",
-    "graphql": "^14.7.0",
+    "graphql": "^0.13.2",
     "graphql-cli": "^4.0.0",
     "graphql-yoga": "^1.18.3",
     "jsonwebtoken": "^8.5.1",
-    "prisma-binding": "^2.3.16"
+    "prisma-binding": "^2.3.16",
+    "subscriptions-transport-ws": "^0.9.15"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
